--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
-    "react-color": "^2.19.3",
+    "react-color": "2.19.3",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
+    "tinycolor2": "^1.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
